--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <h1>TV Calendar</h1>
 
-    <div class="contact-box">
+    <div id="support" class="contact-box">
         <h2 style="margin-top: 0; border: none; color: white;">📞 Support & Contact</h2>
         <p>Vous avez rencontré un bug ? Vous avez une idée de fonctionnalité ? Remplissez ce formulaire et nous vous répondrons rapidement.</p>
         
@@ -135,7 +135,7 @@
         </form>
     </div>
 
-    <div class="policy-section">
+    <div id="privacy" class="policy-section">
         <h2>🔒 Politique de Confidentialité</h2>
         <p><strong>Dernière mise à jour : 27 novembre 2025</strong></p>
 
